# phd-course-containerization

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
