[project]
authors = [{name = "Manuel Andruccioli", email = "manuel.andruccioli@studio.unibo.it"}]
name = "phd-course-containerization"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.tasks]
exec = "python main.py"

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
pandas = ">=2.2.3,<3"
scikit-learn = ">=1.6.1,<2"
python = "==3.13"
